modify author's information

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Biyong Liu"
   uri         : "http://name.com"
-  email       : "name@name.com"
+  email       : "liubiyongge@163.com"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "avatar.jpg"
   twitter     : "name"
   google_plus : "Name"
 
