--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Biyong Liu"
-  avatar           : "avatar.jpg"
+  avatar           : "avatar.png"
   bio              : "Master Candidate at HUST"
   location         : "WuHan, China"
   employer         :
