--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://name.com"
   email       : "liubiyongge@163.com"
   bio         : "This is the first name."
-  avatar      : "avatar.jpg"
+  avatar      : "avatar.png"
   twitter     : "name"
   google_plus : "Name"
 
