--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links links
 main:
+    - title: "Personal Experience"
+      url: /experience/
   # - title: "Publications"
   #   url: /publications/
     
