add chinese name

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Biyong Liu"
+  name             : "Biyong Liu (刘必勇)"
   avatar           : "avatar.png"
   bio              : "Master Candidate at HUST"
   location         : "WuHan, China"
