--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Authors
 
 Name Name:
-  name        : "Biyong Liu"
+  name        : "Biyong Liu  (刘必勇)"
   uri         : "http://name.com"
   email       : "liubiyongge@163.com"
   bio         : "This is the first name."
